# plainr

./: .sourcery.yaml  CLAUDE.md  flesch_analysis.py  pyproject.toml
src/plainr/: __init__.py  main.py
src/plainr/_console/: __init__  _comparison_results.py  _console.py
src/plainr/_data/: __init__.py
src/plainr/_licenses/: __init__.py  _license_content.py  license_content.py
src/plainr/_readability/: _scorer.py
src/plainr/commands/: __init__.py  about.py  compare.py
src/plainr/config/: __init__.py  config.py
src/plainr/types/: __init__.py  licenses.py  readability.py  utility.py
src/plainr/utilities/: __init__.py  readability.py  type_checking.py
