[project]
name = "plainr"
version = "0.1.0"
description = "A CLI tool for developers to manage their Plain License like code, and add plain language linting to their development tools."
readme = "README.md"
authors = [{ name = "Adam Poulemanos", email = "adam@plainlicense.org" }]
requires-python = ">=3.12"
dependencies = [
  "cyclopts>=3.19.0",
  "ez-yaml>=2.2.0",
  "nltk>=3.9.1",
  "py-readability-metrics>=1.4.5",
  "rich>=14.0.0",
]

[project.scripts]
plainr = "plainr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "uv>=0.7.12",
]
