[project]
name = "plainr"
version = "0.1.0"
description = "A CLI tool for developers to manage their Plain License like code, and add plain language linting to their development tools. Get readability metrics, plain language suggestions, add and update your Plain License, and more."
readme = "unlicense"
authors = [{ name = "Adam Poulemanos", email = "adam@plainlicense.org" }]
requires-python = ">=3.12"
license = "unlicense"
dependencies = [
  "cyclopts>=3.19.0",
  "ez-yaml>=2.2.0",
  "nltk>=3.9.1",
  "py-readability-metrics>=1.4.5",
  "rich>=14.0.0",
]

[project.scripts]
plainr = "plainr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "uv>=0.7.13",
]
